# savefmt

./: CMakeLists.txt  Doxyfile  Makefile  README.md  savefmt.cpp  test-savefmt.cpp
awo/: savefmt.hpp
docs/: CMakeLists.txt  Doxyfile
html/: annotated.html  classawo_1_1basic__savefmt-members.html  classawo_1_1basic__savefmt.html  classawo_1_1basic__savefmt_1_1exception.html  classawo_1_1basic__savefmt_1_1exception__coll__graph.md5  classawo_1_1basic__savefmt_1_1exception__inherit__graph.map  classawo_1_1basic__savefmt_1_1exception__inherit__graph.md5  classes.html  dir_267f25976aafc8fe7fdf3232feef13ad.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  menudata.js  namespaceawo.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  savefmt_8cpp.html  savefmt_8cpp__incl.map  savefmt_8cpp__incl.md5  savefmt_8d.html  savefmt_8hpp.html  savefmt_8hpp__dep__incl.map  savefmt_8hpp__dep__incl.md5  savefmt_8hpp__incl.map  savefmt_8hpp__incl.md5  savefmt_8hpp_source.html
html/search/: all_1.js  all_3.js  all_5.js  all_6.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
include/: CMakeLists.txt
include/awo/: savefmt.hpp
test/: CMakeLists.txt  test-savefmt.cpp  test-savefmt.cpp.old
